include $(srcdir)/../common-rules.make

lib_LIBRARIES =                             \
	libfunctionals.a

noinst_HEADERS =                            \
	BLYPFunctional.h                    \
	B3LYPFunctional.h 		    \
	BHLYPFunctional.h	            \
	LDAFunctional.h                     \
        LIBXCFunctional.h                   \
	PBEFunctional.h                     \
	PBERevFunctional.h                  \
	PBESolFunctional.h                  \
	RSHFunctional.h 		    \
	XCFunctional.h

libfunctionals_a_SOURCES =                  \
	BLYPFunctional.cc                   \
	B3LYPFunctional.cc 		    \
        BHLYPFunctional.cc                  \
	LDAFunctional.cc                    \
        LIBXCFunctional.cc                  \
	PBEFunctional.cc                    \
	PBERevFunctional.cc                 \
	RSHFunctional.cc 		    \
	PBESolFunctional.cc
